# Second_Project_v1.0

./: .gitignore  README.md  docker-compose.yml
services/backend/: .env  .env.sample  Dockerfile  pyproject.toml
services/backend/src/: app.py
services/backend/src/exceptions/: api_errors.py
services/backend/src/handlers/: files.py  upload.py
services/backend/src/interfaces/: protocols.py
services/backend/src/settings/: config.py  logging_config.py
services/frontend/: images.html  index.html  upload.html
services/frontend/css/: upload.css
services/frontend/js/: index.js  tabs.js  upload.js
services/frontend/src/html/: upload.html
services/frontend/src/js/: index.js
services/nginx/: nginx.conf
src/css/: images.css  index.css  upload.css
src/html/: images.html  index.html
src/js/: images.js
