[project]
name = "images-hosting-server"
version = "0.1.0"
description = "Image upload server with Docker and Nginx"
authors = [
    {name = "Mykhailo Kalchenko",email = "kalchenko.michael@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
